padding on small screens fixed

--- a/src/components/AddNote/AddNote.module.css
+++ b/src/components/AddNote/AddNote.module.css
@@ -55,7 +55,7 @@ button:hover {
 
 @media (max-width:400px) {
     textarea{
-        padding:2px;
+        padding:5px;
     }
     
 }
